--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
       body {
         color: #ffffff;
         background-color: #216491;
-        background: #216491 url(http://s3.amazonaws.com/twitter_production/profile_background_images/2998727/paperplane.gif) fixed no-repeat top left;
         margin: 40px;
         font-family: "Lucida Grande";
         text-align: center;
@@ -44,17 +43,21 @@
         padding-left: 0px;
         margin-left: 0px;
       }
+      
+      #twitter_update_list li {
+        padding-bottom: 0.5em;
+      }
     </style>
   </head>
   <body>
     <a href="http://github.com/christoph-buente"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" /></a>
     <div id="main">
-      Hi, you reached <a href="http://github.com/christoph-buente">Mathias Meyer</a>.<br/>
-      I have a <a href="http://www.christophbuente.de">blog</a>.
+      <p>Hi, you reached <a href="http://github.com/christoph-buente">Christoph Bünte</a>.</p>
+      <p>I have a <a href="http://www.christophbuente.de">blog</a>.</p>
       I give away free hugs, so you can follow me on the <a href="http://twitter.com/chris_can_do">Twitter</a>, and I'll keep you hugged.
       <br/><br/>
       <div id="repos">
-        <b>My code:</b><br/><br/>
+        <b>My projects:</b><br/><br/>
       </div>
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js" type="text/javascript"></script>
       <script type="text/javascript">
@@ -79,7 +82,7 @@
       </script>
       
       <div id="twitter_list">
-        <b>My chatter:</b>
+        <b>My tweets:</b>
         <ul id="twitter_update_list"></ul>
       </div>
       <script type="text/javascript" src="http://twitter.com/javascripts/blogger.js"></script>
